nginx-ofbiz-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ofbiz-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ofbiz-nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ofbiz-nginx
    spec:
      containers:
      - image: amicohen1/nginx-ajp:latest
        name: nginx
        ports:
        - containerPort: 8081
        resources: {}
        volumeMounts:
        livenessProbe:
           failureThreshold: 3
           httpGet:
             path: /
             port: 8081
             scheme: HTTP
           initialDelaySeconds: 30
           periodSeconds: 30
           successThreshold: 1
           timeoutSeconds: 3
        readinessProbe:
           failureThreshold: 3
           httpGet:
             path: /
             port: 8081
             scheme: HTTP
           initialDelaySeconds: 30
           periodSeconds: 30
           successThreshold: 1
           timeoutSeconds: 3
      - args:
        - ./gradlew
        - ofbiz
        image: amicohen1/ofbiz-k8:latest
        name: ofbiz
        ports:
        - containerPort: 8009
        resources: {}
status: {}
