nginx-ofbiz-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"8081":"bsc-backendconfig"}}'
  labels:
    serviceName: ofbiz-nginx
  name: ofbiz-nginx
spec:
  type: NodePort
  ports:
  - port: 8081
    targetPort: 8081
    name: https
  selector:
    app: ofbiz-nginx
status:
  loadBalancer: {}
